# CMM_Tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mypy-fixes-report.md
schemas/: aluminium_mapping.yaml  canonical_cmm_field_dictionary.yaml  canonical_cmm_schema.json  copper_mining_mapping.yaml  copper_refining_mapping.yaml
tests/: conftest.py
